# ai-results

./: README.md
claude-results/qiyashash-protocol/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  SECURITY.md
claude-results/qiyashash-protocol/clients/cli/src/: commands.rs  config.rs  storage.rs
claude-results/qiyashash-protocol/clients/desktop/: Cargo.toml
claude-results/qiyashash-protocol/clients/desktop/src/: app.rs  state.rs
claude-results/qiyashash-protocol/clients/mobile-core/src/: qiyashash_mobile.udl  storage.rs
claude-results/qiyashash-protocol/clients/web/: index.html  tailwind.config.js  tsconfig.json
claude-results/qiyashash-protocol/clients/web/deploy/: nginx.conf
claude-results/qiyashash-protocol/clients/web/src/: App.tsx
claude-results/qiyashash-protocol/clients/web/src/components/: Layout.tsx  LoadingScreen.tsx
claude-results/qiyashash-protocol/clients/web/src/lib/: utils.ts
claude-results/qiyashash-protocol/clients/web/src/pages/: ChatPage.tsx  SettingsPage.tsx
claude-results/qiyashash-protocol/clients/web/src/stores/: chatStore.ts
claude-results/qiyashash-protocol/crates/qiyashash-anonymity/src/: config.rs  tor.rs
claude-results/qiyashash-protocol/crates/qiyashash-chain/src/: manager.rs
claude-results/qiyashash-protocol/crates/qiyashash-core/: Cargo.toml
claude-results/qiyashash-protocol/crates/qiyashash-core/src/: error.rs  message.rs  types.rs
claude-results/qiyashash-protocol/crates/qiyashash-crypto/benches/: crypto_bench.rs
claude-results/qiyashash-protocol/crates/qiyashash-crypto/src/: chain.rs  identity.rs  lib.rs  x3dh.rs
claude-results/qiyashash-protocol/crates/qiyashash-dht/src/: config.rs  lib.rs  node.rs  storage.rs
claude-results/qiyashash-protocol/crates/qiyashash-protocol/: Cargo.toml
claude-results/qiyashash-protocol/crates/qiyashash-protocol/src/: config.rs  handlers.rs  lib.rs
claude-results/qiyashash-protocol/crates/qiyashash-relay/src/: client.rs  config.rs  error.rs  lib.rs  server.rs  storage.rs
claude-results/qiyashash-protocol/deploy/: docker-compose.yml
claude-results/qiyashash-protocol/deploy/docker/: dht-peer-service.Dockerfile  encryption-service.Dockerfile  identity-service.Dockerfile  relay-service.Dockerfile
claude-results/qiyashash-protocol/deploy/helm/: values.yaml
claude-results/qiyashash-protocol/docs/: PROTOCOL_SPEC.md
claude-results/qiyashash-protocol/services/chain-state-service/src/: api.rs  main.rs  service.rs
claude-results/qiyashash-protocol/services/dht-peer-service/src/: main.rs  peer.rs
claude-results/qiyashash-protocol/services/encryption-service/src/: api.rs  error.rs  main.rs  service.rs
claude-results/qiyashash-protocol/services/identity-service/src/: error.rs  main.rs  storage.rs
claude-results/qiyashash-protocol/services/metadata-nullification-service/: Cargo.toml
claude-results/qiyashash-protocol/services/metadata-nullification-service/src/: error.rs  nullifier.rs
claude-results/qiyashash-protocol/services/relay-coordination-service/src/: error.rs
claude-results/qiyashash-protocol/tests/integration/: e2e_messaging.rs
claude-results/qiyashash-protocol/tests/performance/: benchmarks.rs
claude/content-mamagement-system/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
claude/content-mamagement-system/deploy/: deploy.sh  nginx.conf
claude/content-mamagement-system/prisma/: schema.prisma
claude/content-mamagement-system/src/: middleware.ts
claude/content-mamagement-system/src/app/: globals.css
claude/content-mamagement-system/src/hooks/: index.ts  use-chat.ts  use-debounce.ts  use-socket.ts
claude/content-mamagement-system/src/lib/: utils.ts
claude/content-mamagement-system/src/stores/: auth-store.ts  chat-store.ts  ui-store.ts
claude/content-mamagement-system/src/types/: index.ts
claude/content-management-system/: .env.example  README.md  docker-compose.dev.yml  next.config.ts  package.json
claude/content-management-system/apps/socket-server/: Dockerfile  package.json
claude/content-management-system/deploy/: deploy.sh  setup-ssl.sh
claude/content-management-system/deploy/nginx/: qiyas.conf
claude/content-management-system/prisma/: seed.ts
claude/content-management-system/src/: middleware.ts
claude/content-management-system/src/app/: globals.css
claude/content-management-system/src/hooks/: use-auth.ts  use-media-query.ts
claude/qiyashash-protocol/: README.md
claude/qiyashash-protocol/clients/cli/: Cargo.toml
claude/qiyashash-protocol/clients/cli/src/: main.rs
claude/qiyashash-protocol/clients/mobile-core/: Cargo.toml
claude/qiyashash-protocol/clients/mobile-core/src/: crypto.rs  identity.rs  lib.rs  messaging.rs
claude/qiyashash-protocol/crates/qiyashash-anonymity/: Cargo.toml
claude/qiyashash-protocol/crates/qiyashash-anonymity/src/: error.rs  i2p.rs  lib.rs  obfuscation.rs  transport.rs
claude/qiyashash-protocol/crates/qiyashash-chain/: Cargo.toml
claude/qiyashash-protocol/crates/qiyashash-chain/src/: lib.rs  storage.rs
claude/qiyashash-protocol/crates/qiyashash-crypto/: Cargo.toml
claude/qiyashash-protocol/crates/qiyashash-crypto/src/: aead.rs  error.rs  kdf.rs  keys.rs  ratchet.rs
claude/qiyashash-protocol/crates/qiyashash-dht/: Cargo.toml
claude/qiyashash-protocol/crates/qiyashash-dht/src/: error.rs  fragment.rs
claude/qiyashash-protocol/crates/qiyashash-relay/: Cargo.toml
claude/qiyashash-protocol/deploy/: DEPLOYMENT.md  Dockerfile.identity
claude/qiyashash-protocol/services/dht-peer-service/: Cargo.toml
claude/qiyashash-protocol/services/dht-peer-service/src/: error.rs  storage.rs
claude/qiyashash-protocol/services/encryption-service/: Cargo.toml
claude/qiyashash-protocol/services/identity-service/: Cargo.toml
claude/qiyashash-protocol/services/identity-service/src/: api.rs  service.rs
claude/qiyashash-protocol/services/relay-coordination-service/: Cargo.toml
claude/qiyashash-protocol/services/relay-coordination-service/src/: main.rs
(+140 files in other folders)
