[workspace]
resolver = "2"
members = [
    "crates/qiyashash-core",
    "crates/qiyashash-crypto",
    "crates/qiyashash-protocol",
    "crates/qiyashash-dht",
    "crates/qiyashash-relay",
    "crates/qiyashash-chain",
    "crates/qiyashash-anonymity",
    "services/identity-service",
    "services/encryption-service",
    "services/dht-peer-service",
    "services/relay-coordination-service",
    "services/metadata-nullification-service",
    "services/chain-state-service",
    "clients/cli",
    "clients/desktop",
    "clients/mobile-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QiyasHash Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qiyascc/qiyashashchat"
rust-version = "1.75"

[workspace.dependencies]
# Cryptography
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
curve25519-dalek = { version = "4.1", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = ["tokio", "noise", "yamux", "tcp", "quic", "dns", "kad", "identify", "ping", "gossipsub", "mdns", "macros", "serde"] }
quinn = "0.10"
rustls = "0.22"
webpki-roots = "0.26"

# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"
test-log = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Misc
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
once_cell = "1.19"
reed-solomon-erasure = "6.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2
