[package]
name = "qiyashash-desktop"
description = "QiyasHash Desktop Client (Tauri)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "qiyashash_desktop"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
qiyashash-core = { path = "../../crates/qiyashash-core" }
qiyashash-crypto = { path = "../../crates/qiyashash-crypto" }
qiyashash-protocol = { path = "../../crates/qiyashash-protocol" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
sled = { workspace = true }

# Misc
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
