[package]
name = "qiyashash-cli"
description = "Command-line client for QiyasHash E2E messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "qiyashash"
path = "src/main.rs"

[dependencies]
# Internal
qiyashash-core = { path = "../../crates/qiyashash-core" }
qiyashash-crypto = { path = "../../crates/qiyashash-crypto" }
qiyashash-protocol = { path = "../../crates/qiyashash-protocol" }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization  
serde = { workspace = true }
serde_json = { workspace = true }

# Storage
sled = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Misc
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "5.0"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
