[package]
name = "qiyashash-anonymity"
description = "Traffic obfuscation and anonymity layer for QiyasHash (Tor/I2P)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Networking
arti-client = { version = "0.11", optional = true }
tor-rtcompat = { version = "0.9", optional = true }
i2p = { version = "0.1", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto
rand = { workspace = true }

# Misc
parking_lot = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

[features]
default = []
tor = ["arti-client", "tor-rtcompat"]
i2p = ["dep:i2p"]
full = ["tor", "i2p"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
