[package]
name = "qiyashash-relay"
description = "Relay service for offline message delivery in QiyasHash"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
qiyashash-core = { path = "../qiyashash-core" }
qiyashash-crypto = { path = "../qiyashash-crypto" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Networking
quinn = { workspace = true }
rustls = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
sled = { workspace = true }

# Misc
hex = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
