[package]
name = "encryption-service"
description = "QiyasHash Encryption Service - message encryption and key management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "encryption-service"
path = "src/main.rs"

[dependencies]
# Internal
qiyashash-core = { path = "../../crates/qiyashash-core" }
qiyashash-crypto = { path = "../../crates/qiyashash-crypto" }
qiyashash-protocol = { path = "../../crates/qiyashash-protocol" }

# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Misc
hex = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
