[package]
name = "identity-service"
description = "Identity management service for QiyasHash"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "identity-service"
path = "src/main.rs"

[dependencies]
# Internal
qiyashash-core = { path = "../../crates/qiyashash-core" }
qiyashash-crypto = { path = "../../crates/qiyashash-crypto" }

# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Misc
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
