[package]
name = "relay-coordination-service"
description = "Relay coordination service for QiyasHash offline message delivery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "relay-coordination-service"
path = "src/main.rs"

[dependencies]
# Internal
qiyashash-core = { path = "../../crates/qiyashash-core" }
qiyashash-crypto = { path = "../../crates/qiyashash-crypto" }
qiyashash-relay = { path = "../../crates/qiyashash-relay" }

# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Networking
quinn = { workspace = true }
rustls = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Storage
sled = { workspace = true }

# Misc
hex = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
